--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
           <div class="is-size-5 publication-authors">
             <!-- Paper authors -->
             <span class="author-block">
-              <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Jae Goo Cho</a><sup>1</sup>
+              <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Jae Goo Cho</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Geonho Cha</a><sup>2</sup>
+              <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Geonho Cha</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Songwhai Oh</a><sup>1</sup>,
+              <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Hogun Kee</a><sup>1</sup>,
+            </span>
+            <span class="author-block">
+              <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Songwhai Oh</a><sup>1</sup>
             </span>
           </div>
 
