--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
     <div class="hero-body">
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">MCPD</span> decomposes the point cloud of an articulated object into its motion-based parts in a fully unsupervised manner.
+        Our method unsupervisedly infers the 3D parts of articulated objects from monocular videos, leveraging NeRF models.
       </h2>
     </div>
   </div>
