--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item" style="width: 33%">
+        <div class="item" style="width: 33%; height: 33%">
           <video poster="" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item" style="width: 33%">
+        <div class="item" style="width: 33%; height: 33%">
           <video poster="" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item" style="width: 33%">
+        <div class="item" style="width: 33%; height: 33%">
           <video poster="" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
           </video>
