--- a/index.html
+++ b/index.html
@@ -238,17 +238,17 @@
             <div class="hero-body" style="width: 100%; height: 100%; margin: auto;">
               <div id="results-carousel" class="carousel results-carousel">
                 <div class="item">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%">
+                  <video poster="" id="tree" autoplay controls muted loop height="100%" width="33%">
                     <source src="static/videos/door_moving_mp4.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="item">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%">
+                  <video poster="" id="tree" autoplay controls muted loop height="100%" width="33%">
                     <source src="static/videos/leg_moving_mp4.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="item">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%">
+                  <video poster="" id="tree" autoplay controls muted loop height="100%" width="33%">
                     <source src="static/videos/arm_moving_mp4.mp4" type="video/mp4">
                   </video>
                 </div>
