--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
     </div>
   </div>
 </section>
-  
+
 <!-- Paper abstract -->
-<section class="section hero is-light">
+<section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
