--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item"">
+        <div class="item">
           <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
             <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
           </video>
