--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
           <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
             <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
           </video>
+          <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
+            <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
+          </video>
+          <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
+            <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="item item-chair-tp">
           <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
