--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item" width="33%">
+        <div class="item-small">
           <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
             <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
           </video>
