--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
           </video>
         </div>
         <div>
-          <div class="item-small">
+          <div class="item-small" style="float: left">
             <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
               <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
             </video>
           </div>
-          <div class="item-small">
+          <div class="item-small" style="float: left">
             <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
               <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
             </video>
