--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
               <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
             </video>
           </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
       </div>
     </div>
