--- a/index.html
+++ b/index.html
@@ -140,16 +140,39 @@
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item">
-          <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
-            <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
-          </video>
-          <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
-            <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
-          </video>
-          <video poster="" autoplay controls muted loop playsinline height="100%" width="33%">
-            <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
-          </video>
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="item-small" style="float: left">
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
         <div>
           <div class="item-small" style="float: left">
