--- a/index.html
+++ b/index.html
@@ -224,39 +224,10 @@
   <div class="columns is-centered">
     <div class="column">
       <div class="content">
-        <h2 class="title is-3">KinArt3D Dataset</h2>
-        <h3 class="title is-4">Specifcation</h3>
+        <h2 class="title is-3">Articulated Mapping Function</h2>
         <p>
         The KinArt3D dataset offers annotations for part segmentation at both the instance and motion levels, covering 92 distinct models across eight articulated object categories.
         </p>
-        <div>
-          <div class="meshA" style="width: 50%; float:left">
-            <model-viewer src="static/meshes/fan.gltf" alt="fan" auto-rotate camera-controls ar ios-src="static/meshes/fan.gltf"></model-viewer>
-          </div>
-          <div class="meshA" style="width: 50%; float:right">
-            <model-viewer src="static/meshes/leg.gltf" alt="leg" auto-rotate camera-controls ar ios-src="static/meshes/leg.gltf"></model-viewer>
-          </div>
-        </div>
-        <div style="width: 100%; height: 100px">
-          <div class="meshA" style="width: 16.6%; float:left">
-            <model-viewer src="static/meshes/snake.gltf" alt="snake" auto-rotate camera-controls ar ios-src="static/meshes/snake.gltf"></model-viewer>
-          </div>
-          <div class="meshA" style="width: 16.6%; float:left">
-            <model-viewer src="static/meshes/hinge.gltf" alt="hinge" auto-rotate camera-controls ar ios-src="static/meshes/hinge.gltf"></model-viewer>
-          </div>
-          <div class="meshA" style="width: 16.6%; float:left">
-            <model-viewer src="static/meshes/lamp.gltf" alt="lamp" auto-rotate camera-controls ar ios-src="static/meshes/lamp.gltf"></model-viewer>
-          </div>
-          <div class="meshA" style="width: 16.6%; float:left">
-            <model-viewer src="static/meshes/glasses.gltf" alt="glasses" auto-rotate camera-controls ar ios-src="static/meshes/glasses.gltf"></model-viewer>
-          </div>
-          <div class="meshA" style="width: 16.6%; float:left">
-            <model-viewer src="static/meshes/door.gltf" alt="door" auto-rotate camera-controls ar ios-src="static/meshes/door.gltf"></model-viewer>
-          </div>
-          <div class="meshA" style="width: 16.6%; float:left">
-            <model-viewer src="static/meshes/arm.gltf" alt="arm" auto-rotate camera-controls ar ios-src="static/meshes/arm.gltf"></model-viewer>
-          </div>
-        </div>
       </div>
     </div>
   </div>
