--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     </div>
     
     <div class="column" style="width: 50%">
-      <h3 class="title is-4">Point cloud sampling</h3>
+      <h3 class="title is-4">Voxelization</h3>
       <p>
       Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
       </p>
@@ -276,40 +276,20 @@
             <div style="width: 45%; float:left; margin: auto;">
               <two-up>
                 <div class="first-wrapper">
-                  <img src="static/images/arm_mesh.png">
+                  <img src="static/images/ball_raw.png">
                 </div>
                 <div class="second-wrapper">
-                  <img src="static/images/arm_pc.png">
+                  <img src="static/images/ball_voxel.png">
                 </div>
               </two-up>
             </div>
             <div style="width: 45%; float:left; margin: auto;">
               <two-up>
                 <div class="first-wrapper">
-                  <img src="static/images/leg_mesh.png">
+                  <img src="static/images/standup_raw.png">
                 </div>
                 <div class="second-wrapper">
-                  <img src="static/images/leg_pc.png">
-                </div>
-              </two-up>
-            </div>
-            <div style="width: 45%; float:left; margin: auto;">
-              <two-up>
-                <div class="first-wrapper">
-                  <img src="static/images/door_mesh.png">
-                </div>
-                <div class="second-wrapper">
-                  <img src="static/images/door_pc.png">
-                </div>
-              </two-up>
-            </div>
-            <div style="width: 45%; float:left; margin: auto;">
-              <two-up>
-                <div class="first-wrapper">
-                  <img src="static/images/snake_mesh.png">
-                </div>
-                <div class="second-wrapper">
-                  <img src="static/images/snake_pc.png">
+                  <img src="static/images/standup_voxel.png">
                 </div>
               </two-up>
             </div>
