--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <div class="container is-max-desktop">
         <div class="hero-body">
           <div style="width: 100%; height: 100%">
-            <div style="width: 45%; float:left; margin: auto;">
+            <div style="width: 40%; float:left; margin: auto; margin-right: 50px">
               <two-up>
                 <div class="first-wrapper">
                   <img src="static/images/ball_raw.png">
@@ -283,7 +283,7 @@
                 </div>
               </two-up>
             </div>
-            <div style="width: 45%; float:left; margin: auto;">
+            <div style="width: 40%; float:left; margin: auto;">
               <two-up>
                 <div class="first-wrapper">
                   <img src="static/images/standup_raw.png">
