--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <div class="columns is-centered">
     <div class="column">
       <div class="content">
-        <h2 class="title is-3">Articulated Mapping Function</h2>
+        <h2 class="title is-3">Articulated Deformation Modeling</h2>
         <p>
         The KinArt3D dataset offers annotations for part segmentation at both the instance and motion levels, covering 92 distinct models across eight articulated object categories.
         </p>
@@ -237,31 +237,11 @@
   <div class="columns is-centered">
     <div class="column" style="width: 50%">
       <div class="content">
-        <h3 class="title is-4">Deformable shapes</h3>
-          <p>
-          Using the kinematic model of each object, it is possible to generate various poses for articulated objects.  
-          </p>
-          <div class="container is-max-desktop">
-            <div class="hero-body" style="width: 100%; height: 100%; margin: auto;">
-              <div id="results-carousel" class="carousel results-carousel">
-                <div class="item">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%" width="33%">
-                    <source src="static/videos/door_moving_mp4.mp4" type="video/mp4">
-                  </video>
-                </div>
-                <div class="item">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%" width="33%">
-                    <source src="static/videos/leg_moving_mp4.mp4" type="video/mp4">
-                  </video>
-                </div>
-                <div class="item">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%" width="33%">
-                    <source src="static/videos/arm_moving_mp4.mp4" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-            </div>
-          </div>
+        <h3 class="title is-4">Articulated Mapping Function </h3>
+        <p>
+        Using the kinematic model of each object, it is possible to generate various poses for articulated objects.  
+        </p>
+        <img src="static/images/mapping_function.png">
       </div>
     </div>
     
