--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   <div class="columns is-centered">
     <div class="column" style="width: 50%">
       <div class="content">
-        <h3 class="title is-4">Articulated Mapping Function </h3>
+        <h3 class="title is-4">Articulated Mapping Function</h3>
         <p>
         Using the kinematic model of each object, it is possible to generate various poses for articulated objects.  
         </p>
@@ -279,6 +279,22 @@
     </div>
   </div>
 </div>
+
+<section class="section">
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column" style="width: 50%">
+      <div class="content">
+        <h3 class="title is-4">3D reconstruction loss</h3>
+        <p>
+        Using the kinematic model of each object, it is possible to generate various poses for articulated objects.  
+        </p>
+        <img src="static/images/mapping_function.png">
+      </div>
+    </div>
+  </div>
+</div>
+</section>
 
 <section class="section">
   <div class="container is-max-desktop">
