--- a/index.html
+++ b/index.html
@@ -292,6 +292,12 @@
         <img src="static/images/mapping_function.png">
       </div>
     </div>
+    <div class="column" style="width: 50%">
+      <h3 class="title is-4">Voxelization</h3>
+      <p>
+      Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
+      </p>
+    </div>
   </div>
 </div>
 </section>
