--- a/index.html
+++ b/index.html
@@ -274,6 +274,28 @@
               </two-up>
             </div>
           </div>
+          <div style="width: 100%; height: 100%">
+            <div style="width: 40%; float:left; margin: auto; margin-right: 50px">
+              <two-up>
+                <div class="first-wrapper">
+                  <img src="static/images/mutant_raw.png">
+                </div>
+                <div class="second-wrapper">
+                  <img src="static/images/mutant_voxel.png">
+                </div>
+              </two-up>
+            </div>
+            <div style="width: 40%; float:left; margin: auto;">
+              <two-up>
+                <div class="first-wrapper">
+                  <img src="static/images/standup_raw.png">
+                </div>
+                <div class="second-wrapper">
+                  <img src="static/images/standup_voxel.png">
+                </div>
+              </two-up>
+            </div>
+          </div>
         </div>
       </div>
     </div>
