--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
             <div style="width: 40%; float:left; margin: auto;">
               <two-up>
                 <div class="first-wrapper">
-                  <img src="static/images/standup_raw.png">
+                  <img src="static/images/lego_raw.png">
                 </div>
                 <div class="second-wrapper">
-                  <img src="static/images/standup_voxel.png">
+                  <img src="static/images/lego_voxel.png">
                 </div>
               </two-up>
             </div>
@@ -305,17 +305,13 @@
 <section class="section">
 <div class="container is-max-desktop">
   <div class="columns is-centered">
+    <h3 class="title is-4">3D reconstruction loss</h3>
     <div class="column" style="width: 50%">
       <div class="content">
-        <h3 class="title is-4">3D reconstruction loss</h3>
-        <p>
-        Using the kinematic model of each object, it is possible to generate various poses for articulated objects.  
-        </p>
         <img src="static/images/mapping_function.png">
       </div>
     </div>
     <div class="column" style="width: 50%">
-      <h3 class="title is-4">Voxelization</h3>
       <p>
       Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
       </p>
