--- a/index.html
+++ b/index.html
@@ -306,15 +306,17 @@
 <div class="container is-max-desktop">
   <div class="columns is-centered">
     <h3 class="title is-4">3D reconstruction loss</h3>
-    <div class="column" style="width: 50%">
-      <div class="content">
-        <img src="static/images/mapping_function.png">
+    <div class="container is-max-desktop">
+      <div class="column" style="width: 50%">
+        <div class="content">
+          <img src="static/images/mapping_function.png">
+        </div>
       </div>
-    </div>
-    <div class="column" style="width: 50%">
-      <p>
-      Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
-      </p>
+      <div class="column" style="width: 50%">
+        <p>
+        Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
+        </p>
+      </div>
     </div>
   </div>
 </div>
