--- a/index.html
+++ b/index.html
@@ -306,17 +306,22 @@
 <div class="container is-max-desktop">
   <div class="columns is-centered">
     <h3 class="title is-4">3D reconstruction loss</h3>
-    <div class="container is-max-desktop">
-      <div class="column" style="width: 50%">
-        <div class="content">
-          <img src="static/images/mapping_function.png">
-        </div>
+  </div>
+</div>
+</section>
+  
+<section class="section">
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column" style="width: 50%">
+      <div class="content">
+        <img src="static/images/mapping_function.png">
       </div>
-      <div class="column" style="width: 50%">
-        <p>
-        Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
-        </p>
-      </div>
+    </div>
+    <div class="column" style="width: 50%">
+      <p>
+      Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
+      </p>
     </div>
   </div>
 </div>
