--- a/index.html
+++ b/index.html
@@ -305,7 +305,9 @@
 <section class="section">
 <div class="container is-max-desktop">
   <div class="columns is-centered">
-    <h3 class="title is-4">3D reconstruction loss</h3>
+    <div class="content">
+      <h3 class="title is-4">3D reconstruction loss</h3>
+    </div>
   </div>
 </div>
 </section>
