--- a/index.html
+++ b/index.html
@@ -241,7 +241,71 @@
         <img src="static/images/mapping_function.png">
       </div>
     </div>
-    
+    <div class="column" style="width: 50%">
+      <h3 class="title is-4">Voxelization</h3>
+      <p>
+      Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
+      </p>
+      <div class="container is-max-desktop">
+        <div class="hero-body">
+          <div style="width: 100%; height: 100%">
+            <div style="width: 40%; float:left; margin: auto; margin-right: 50px">
+              <two-up>
+                <div class="first-wrapper">
+                  <img src="static/images/ball_raw.png">
+                </div>
+                <div class="second-wrapper">
+                  <img src="static/images/ball_voxel.png">
+                </div>
+              </two-up>
+            </div>
+            <div style="width: 40%; float:left; margin: auto;">
+              <two-up>
+                <div class="first-wrapper">
+                  <img src="static/images/standup_raw.png">
+                </div>
+                <div class="second-wrapper">
+                  <img src="static/images/standup_voxel.png">
+                </div>
+              </two-up>
+            </div>
+          </div>
+          <div style="width: 100%; height: 100%">
+            <div style="width: 40%; float:left; margin: auto; margin-right: 50px">
+              <two-up>
+                <div class="first-wrapper">
+                  <img src="static/images/mutant_raw.png">
+                </div>
+                <div class="second-wrapper">
+                  <img src="static/images/mutant_voxel.png">
+                </div>
+              </two-up>
+            </div>
+            <div style="width: 40%; float:left; margin: auto;">
+              <two-up>
+                <div class="first-wrapper">
+                  <img src="static/images/lego_raw.png">
+                </div>
+                <div class="second-wrapper">
+                  <img src="static/images/lego_voxel.png">
+                </div>
+              </two-up>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="columns is-centered">
+    <div class="column" style="width: 50%">
+      <div class="content">
+        <h3 class="title is-4">Articulated Mapping Function</h3>
+        <p>
+        Using the kinematic model of each object, it is possible to generate various poses for articulated objects.  
+        </p>
+        <img src="static/images/mapping_function.png">
+      </div>
+    </div>
     <div class="column" style="width: 50%">
       <h3 class="title is-4">Voxelization</h3>
       <p>
