--- a/index.html
+++ b/index.html
@@ -297,7 +297,11 @@
     </div>
   </div>
   <div class="columns is-centered">
-    <h3 class="title is-4">Articulated Mapping Function</h3>
+    <div class="content">
+      <h3 class="title is-4">Articulated Mapping Function</h3>
+    </div>
+  </div>
+  <div class="columns is-centered">
     <div class="column" style="width: 50%">
       <div class="content">
         <img src="static/images/mapping_function.png">
