--- a/index.html
+++ b/index.html
@@ -297,8 +297,10 @@
     </div>
   </div>
   <div class="columns is-centered">
-    <div class="content">
-      <h3 class="title is-4">Articulated Mapping Function</h3>
+    <div class="column">
+      <div class="content">
+        <h3 class="title is-4">Articulated Mapping Function</h3>
+      </div>
     </div>
   </div>
   <div class="columns is-centered">
