--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <div class="column" style="width: 50%">
       <h3 class="title is-4">Voxelization</h3>
       <p>
-      Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
+      We use the inferred emptiness voxel map from the NeRF model to represent the 3D structure of the scene.
       </p>
       <div class="container is-max-desktop">
         <div class="hero-body">
