--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     </div>
     <div class="column" style="width: 50%">
       <p>
-      Points are sampled on the surface of the articulated object's mesh to generate a point cloud from the mesh.
+      After applying the relevant transformations to the emptiness voxel map for each part, revoxelizing them, we can map the emptiness voxel map from time t to time t'.
       </p>
     </div>
   </div>
