--- a/index.html
+++ b/index.html
@@ -316,177 +316,6 @@
   </div>
 </div>
 
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column">
-        <div class="content">
-          <h2 class="title is-3">Unsupervised 3D Part Decomposition</h2>
-          <p>
-          The proposed method enables the unsupervised decomposition of the source point cloud of an articulated object into multiple parts.
-          </p>
-          <h3 class="title is-4">Optimization using a single target point cloud</h3>
-          <p>
-          Given a single target point cloud, the proposed method involves decomposing the source point cloud and reconstructing the target point cloud from it.
-          </p>
-          <div style="width: 80%; height: 40%; margin: 0 auto;">
-            <div style="width: 50%; height: 100%; float:left; margin: auto; text-align: center">
-              <img border="5" src="static/images/leg_source_point_cloud.png">
-              <p style="font-size: 20px"><b>Source point cloud</b></p>
-            </div>
-            <div style="width: 50%; height: 100%; float:left; margin: auto; text-align: center">
-              <video poster="" id="tree" autoplay controls muted loop height="100%">
-                <source src="static/videos/leg_segmentation_mp4.mp4" type="video/mp4">
-              </video>
-              <p style="font-size: 20px"><b>Decomposition result</b></p>
-            </div>
-          </div>
-          <div style="width: 80%; height: 40%; margin: 0 auto;">
-            <div style="width: 50%; height: 100%; float:left; margin: auto; text-align: center">
-              <img border="5" src="static/images/leg_target_point_cloud.png">
-              <p style="font-size: 20px"><b>Target point cloud</b></p>
-            </div>
-            <div style="width: 50%; height: 100%; float:left; margin: auto; text-align: center">
-              <video poster="" id="tree" autoplay controls muted loop height="100%">
-                <source src="static/videos/leg_reconstruction_mp4.mp4" type="video/mp4">
-              </video>
-              <p style="font-size: 20px"><b>Reconstruction result</b></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column">
-        <div class="content">
-          <h3 class="title is-4">Optimization using multiple target point clouds</h3>
-          <p>
-          Similarly, when multiple target point clouds are provided, it is also possible to decompose the source point cloud to simultaneously reconstruct all target point clouds.
-          </p>
-          <div>
-            <div style="width: 80%; height: 40%; margin: 0 auto">
-              <div style="width: 50%; height: 100%; float:left; text-align: center">
-                <img border="5" src="static/images/arm_source_point_cloud.png">
-                <p style="font-size: 20px"><b>Source point cloud</b></p>
-              </div>
-              <div style="width: 50%; height: 100%; float:left; text-align: center">
-                <video poster="" id="tree" autoplay controls muted loop height="100%">
-                  <source src="static/videos/arm_segmentation_mp4.mp4" type="video/mp4">
-                </video>
-                <p style="font-size: 20px"><b>Decompostion result</b></p>
-              </div>
-            </div>
-            <div style="width: 80%; height: 40%; margin: 0 auto">
-              <div style="width: 50%; height: 50%; float:left">
-                <div style="width: 50%; height: 100%; float:left">
-                  <img border="5" src="static/images/arm_target_point_cloud_0.png">
-                </div>
-                <div style="width: 50%; height: 100%; float:left">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%">
-                    <source src="static/videos/arm_reconstruction_0_mp4.mp4" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-              <div style="width: 50%; height: 50%; float:left">
-                <div style="width: 50%; height: 100%; float:left">
-                  <img border="5" src="static/images/arm_target_point_cloud_1.png">
-                </div>
-                <div style="width: 50%; height: 100%; float:left">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%">
-                    <source src="static/videos/arm_reconstruction_1_mp4.mp4" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-            </div>
-            <div style="width: 80%; height: 40%; margin: 0 auto">
-              <div style="width: 50%; height: 50%; float:left">
-                <div style="width: 50%; height: 100%; float:left; text-align: center">
-                  <img border="5" src="static/images/arm_target_point_cloud_2.png">
-                  <p style="font-size: 20px"><b>Target point cloud</b></p>
-                </div>
-                <div style="width: 50%; height: 100%; float:left; text-align: center">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%">
-                    <source src="static/videos/arm_reconstruction_2_mp4.mp4" type="video/mp4">
-                  </video>
-                  <p style="font-size: 20px"><b>Reconstruction result</b></p>
-                </div>
-              </div>
-              <div style="width: 50%; height: 50%; float:left">
-                <div style="width: 50%; height: 100%; float:left; text-align: center">
-                  <img border="5" src="static/images/arm_target_point_cloud_3.png">
-                  <p style="font-size: 20px"><b>Target point cloud</b></p>
-                </div>
-                <div style="width: 50%; height: 100%; float:left; text-align: center">
-                  <video poster="" id="tree" autoplay controls muted loop height="100%">
-                    <source src="static/videos/arm_reconstruction_3_mp4.mp4" type="video/mp4">
-                  </video>
-                  <p style="font-size: 20px"><b>Reconstruction result</b></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-<div class="container is-max-desktop">
-  <div class="columns is-centered">
-    <div class="column">
-      <div class="content">
-        <h2 class="title is-3">Target Point Proposer</h2>
-        <p>
-        We propose a method for collecting target point clouds to decompose an artiuculated object while interacting with the object.
-        </p>
-        <div style="width: 33%; height: 33%; float:left; text-align: center; margin: auto">
-          <img border="5" src="static/images/target_point_proposer_0.jpg">
-          <p style="font-size: 20px"><b>Initial state</b></p>
-        </div>
-        <div style="width: 33%; height: 33%; float:left; text-align: center; margin: auto">
-          <video poster="" id="tree" autoplay controls muted loop height="100%">
-            <source src="static/videos/target_point_proposer_1_mp4.mp4" type="video/mp4">
-          </video>
-          <p style="font-size: 20px"><b>The first interaction</b></p>
-        </div>
-        <div style="width: 33%; height: 33%; float:left; text-align: center; margin: auto">
-          <video poster="" id="tree" autoplay controls muted loop height="100%">
-            <source src="static/videos/target_point_proposer_2_mp4.mp4" type="video/mp4">
-          </video>
-          <p style="font-size: 20px"><b>The second interaction</b></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
-  
-<!--BibTex citation -->
-<section class="section" id="BibTeX">
-  <div class="container is-max-desktop content">
-    <h2 class="title">BibTeX</h2>
-    <pre><code>
-      @article{choy2022unsupervised,
-        title={Unsupervised 3D Link Segmentation of Articulated Objects With a Mixture of Coherent Point Drift},
-        author={Choy, Jaegoo and Cha, Geonho and Oh, Songhwai},
-        journal={IEEE Robotics and Automation Letters},
-        volume={7},
-        number={3},
-        pages={7124--7131},
-        year={2022},
-        publisher={IEEE}
-      }
-    </code></pre>
-  </div>
-</section>
-<!--End BibTex citation -->
-
 <footer class="footer">
 <div class="container">
   <div class="columns is-centered">
@@ -499,7 +328,7 @@
         </p>
         <p>
           This means you are free to borrow the <a
-            href="https://github.com/choonsik93/mcpd">source code</a> of this website,
+            href="https://github.com/choonsik93/artnerf">source code</a> of this website,
           we just ask that you link back to this page in the footer.
           Please remember to remove the analytics code included in the header of the website which
           you do not want on your website.
