--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Unsupervised 3D Part Decomposition via Leveraged Neural Radiance Fields</h1>
+          <h1 class="title is-1 publication-title">Unsupervised 3D Part Decomposition via Leveraged Gaussian Splatting</h1>
           <div class="is-size-5 publication-authors">
             <!-- Paper authors -->
             <span class="author-block">
-              <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Jae Goo Cho</a><sup>1</sup>,
+              <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Jae Goo Choy</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Geonho Cha</a><sup>2</sup>,
@@ -80,58 +80,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body" style="text-align:center">
-      <div style="width: 20%; height: 20%; display:inline-block; margin: 0 auto; margin-right: 50px">
-        <two-up>
-          <div class="first-wrapper">
-            <img src="static/images/teaser_arm5_mesh.png">
-          </div>
-          <div class="second-wrapper">
-            <img src="static/images/teaser_arm5_pc.png">
-          </div>
-        </two-up>
-      </div>
-      <div style="width: 20%; height: 20%; display:inline-block; margin: 0 auto; margin-right: 50px">
-        <two-up>
-          <div class="first-wrapper">
-            <img src="static/images/teaser_glasses_mesh.png">
-          </div>
-          <div class="second-wrapper">
-            <img src="static/images/teaser_glasses_pc.png">
-          </div>
-        </two-up>
-      </div>
-      <div style="width: 20%; height: 20%; display:inline-block; margin: 0 auto; margin-right: 50px">
-        <two-up>
-          <div class="first-wrapper">
-            <img src="static/images/teaser_arm_mesh.png">
-          </div>
-          <div class="second-wrapper">
-            <img src="static/images/teaser_arm_pc.png">
-          </div>
-        </two-up>
-      </div>
-      <div style="width: 20%; height: 20%; display:inline-block; margin: 0 auto;">
-        <two-up>
-          <div class="first-wrapper">
-            <img src="static/images/teaser_leg_mesh.png">
-          </div>
-          <div class="second-wrapper">
-            <img src="static/images/teaser_leg_pc.png">
-          </div>
-        </two-up>
-      </div>
-    </div>
-    <div class="hero-body">
-      <h2 class="subtitle has-text-centered">
-        Our method unsupervisedly infers the 3D parts of articulated objects from monocular videos, leveraging NeRF models.
-      </h2>
     </div>
   </div>
 </section>
@@ -192,6 +140,11 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="hero-body">
+      <h2 class="subtitle has-text-centered">
+        Our method unsupervisedly infers the 3D parts of articulated objects from monocular videos, leveraging NeRF models.
+      </h2>
     </div>
   </div>
 </section>
