--- a/index.html
+++ b/index.html
@@ -167,7 +167,18 @@
         </div>
       </div>
     </div>
+    <!-- Paper video. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Video</h2>
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/52Rqxs6682A?si=xiQeNcgmw-0kqDd2"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
   </div>
+  
 </section>
 <!-- End paper abstract -->
 
