--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </div>
 </section>
 
-<section class="hero is-light is-small">
+<section class="hero teaser">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
@@ -150,7 +150,7 @@
 </section>
 
 <!-- Paper abstract -->
-<section class="section">
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
