--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/52Rqxs6682A?si=xiQeNcgmw-0kqDd2"
+          <iframe src="https://www.youtube.com/embed/satkga-7_4c"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
