--- a/index.html
+++ b/index.html
@@ -172,13 +172,12 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/satkga-7_4c"
+          <iframe src="https://www.youtube.com/embed/satkga-7_4c?si=dm5yAHSaWAvVdks2"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </div>
-  
 </section>
 <!-- End paper abstract -->
 
