--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@
   <div class="columns is-centered">
     <div class="column">
       <div class="content">
+        <h2 class="title is-3">Training Process</h2>
+      </div>
+    </div>
+  </div>
+</div>
+
+<section class="section">
+<div class="container is-max-desktop">
+  <div class="columns is-centered">
+    <div class="column">
+      <div class="content">
         <h2 class="title is-3">Articulated Deformation Modeling</h2>
       </div>
     </div>
@@ -277,6 +288,7 @@
     </div>
   </div>
 </div>
+</section>
 
 <footer class="footer">
 <div class="container">
