--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
     </div>
   </div>
 </div>
-
+</section>
+  
 <section class="section">
 <div class="container is-max-desktop">
   <div class="columns is-centered">
