--- a/index.html
+++ b/index.html
@@ -187,56 +187,58 @@
     <div class="column">
       <div class="content">
         <h2 class="title is-3">Training Process</h2>
-        <div id="results-carousel" class="carousel results-carousel">
-          <div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
-              </video>
+        <div class="container">
+          <div id="results-carousel" class="carousel results-carousel">
+            <div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
             </div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
-              </video>
+            <div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
             </div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
-              </video>
-            </div>
-          </div>
-          <div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
-              </video>
-            </div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
-              </video>
-            </div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
-              </video>
-            </div>
-          </div>
-          <div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
-              </video>
-            </div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
-              </video>
-            </div>
-            <div class="item-small" style="float: left">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
-              </video>
+            <div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
             </div>
           </div>
         </div>
