--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       <div class="content">
         <h2 class="title is-3">Training Process</h2>
         <div class="container">
+          <div>
           <div id="results-carousel" class="carousel results-carousel">
             <div class="item-small" style="float: left">
               <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
@@ -204,6 +205,7 @@
                 <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
               </video>
             </div>
+          </div>
           </div>
         </div>
       </div>
