--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
     <div class="column">
       <div class="content">
         <h2 class="title is-3">Training Process</h2>
+        <div class="container is-max-desktop">
+          <div id="results-carousel" class="carousel results-carousel">
+          </div>
+        </div>
       </div>
     </div>
   </div>
