--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
         <h2 class="title is-3">Training Process</h2>
         <div class="container is-max-desktop">
           <div id="results-carousel" class="carousel results-carousel">
+            <div class="carousel-item active">
+              <img src="./static/images/carousel1.jpg">
+            </div>
+            <div class="carousel-item">
+              <img src="./static/images/carousel2.jpg">
+            </div>
+            <div class="carousel-item">
+              <img src="./static/images/carousel3.jpg">
+            </div>
           </div>
         </div>
       </div>
