--- a/index.html
+++ b/index.html
@@ -189,15 +189,18 @@
         <h2 class="title is-3">Training Process</h2>
         <div class="container is-max-desktop">
           <div id="results-carousel" class="carousel results-carousel">
-            <div class="carousel-item active">
-              <img src="./static/images/carousel1.jpg">
-            </div>
-            <div class="carousel-item">
-              <img src="./static/images/carousel2.jpg">
-            </div>
-            <div class="carousel-item">
-              <img src="./static/images/carousel3.jpg">
-            </div>
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/hellwarrior_1.0.mp4" type="video/mp4">
+            </video>
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/hook_1.0.mp4" type="video/mp4">
+            </video>
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/standup_1.0.mp4" type="video/mp4">
+            </video>
+            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <source src="./static/videos/bouncingballs_1.0.mp4" type="video/mp4">
+            </video>
           </div>
         </div>
       </div>
