--- a/index.html
+++ b/index.html
@@ -189,18 +189,57 @@
         <h2 class="title is-3">Training Process</h2>
         <div class="container is-max-desktop">
           <div id="results-carousel" class="carousel results-carousel">
-            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-              <source src="./static/videos/hellwarrior_1.0.mp4" type="video/mp4">
-            </video>
-            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-              <source src="./static/videos/hook_1.0.mp4" type="video/mp4">
-            </video>
-            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-              <source src="./static/videos/standup_1.0.mp4" type="video/mp4">
-            </video>
-            <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-              <source src="./static/videos/bouncingballs_1.0.mp4" type="video/mp4">
-            </video>
+            <div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/hellwarrior_1.0.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/hook_1.0.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/boungingballs_1.0.mp4" type="video/mp4">
+                </video>
+              </div>
+            </div>
+            <div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/standup_1.0_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+            </div>
+            <div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/ball_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/hell_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="item-small" style="float: left">
+                <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+                  <source src="./static/videos/gundam_moving_mp4.mp4" type="video/mp4">
+                </video>
+              </div>
+            </div>
           </div>
         </div>
       </div>
