--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div>
               <div class="item-small" style="float: left">
                 <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
-                  <source src="./static/videos/standup_1.0_mp4.mp4" type="video/mp4">
+                  <source src="./static/videos/standup_1.0.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="item-small" style="float: left">
