--- a/index.html
+++ b/index.html
@@ -189,17 +189,29 @@
         <h2 class="title is-3">Training Process</h2>
         <div class="container">
           <div id="results-carousel" class="carousel results-carousel">
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
                 <source src="./static/videos/hellwarrior_1.0.mp4" type="video/mp4">
               </video>
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
                 <source src="./static/videos/hook_1.0.mp4" type="video/mp4">
               </video>
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
                 <source src="./static/videos/bouncingballs_1.0.mp4" type="video/mp4">
               </video>
-              <video poster="" autoplay controls muted loop playsinline height="100%" width="100%">
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
                 <source src="./static/videos/standup_1.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/lego_1.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/mutant_1.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/trex_1.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/jumpingjacks_1.0.mp4" type="video/mp4">
               </video>
           </div>
         </div>
