--- a/index.html
+++ b/index.html
@@ -302,6 +302,35 @@
               </video>
           </div>
         </div>
+
+        <div class="container">
+          <div id="results-carousel" class="carousel results-carousel">
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/hellwarrior_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/hook_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/bouncingballs_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/standup_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/lego_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/mutant_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/trex_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/jumpingjacks_0.0001_0.0.mp4" type="video/mp4">
+              </video>
+          </div>
+        </div>
         
       </div>
     </div>
