--- a/index.html
+++ b/index.html
@@ -331,6 +331,35 @@
               </video>
           </div>
         </div>
+
+        <div class="container">
+          <div id="results-carousel" class="carousel results-carousel">
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/hellwarrior_photo.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/hook_photo.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/bouncingballs_photo.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/standup_photo.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/lego_photo.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/mutant_photo.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/trex_photo.mp4" type="video/mp4">
+              </video>
+              <video poster="" autoplay controls muted loop playsinline height="30%" width="30%">
+                <source src="./static/videos/jumpingjacks_photo.mp4" type="video/mp4">
+              </video>
+          </div>
+        </div>
         
       </div>
     </div>
